--- a/kong.yaml
+++ b/kong.yaml
@@ -1,25 +1,42 @@
 _format_version: "3.0"
 services:
-- connect_timeout: 60000
-  enabled: true
-  host: mockbin.org
-  name: mock
-  port: 80
-  protocol: http
-  read_timeout: 60000
-  retries: 5
-  routes:
-  - https_redirect_status_code: 426
+  - connect_timeout: 60000
+    enabled: true
+    host: mockbin.org
     name: mock
-    path_handling: v0
-    paths:
-    - /mock
-    preserve_host: false
-    protocols:
-    - http
-    - https
-    regex_priority: 0
-    request_buffering: true
-    response_buffering: true
-    strip_path: true
-  write_timeout: 60000
+    port: 80
+    protocol: http
+    read_timeout: 60000
+    retries: 5
+    routes:
+      - https_redirect_status_code: 426
+        name: mock
+        path_handling: v0
+        paths:
+          - /mock
+        preserve_host: false
+        protocols:
+          - http
+          - https
+        methods:
+          - get
+          - post
+        regex_priority: 0
+        request_buffering: true
+        response_buffering: true
+        strip_path: true
+      - https_redirect_status_code: 426
+        name: another thing
+        path_handling: v0
+        paths:
+          - /create
+        preserve_host: false
+        protocols:
+          - http
+        methods:
+          - post
+        regex_priority: 0
+        request_buffering: true
+        response_buffering: true
+        strip_path: true
+    write_timeout: 60000
